@@ -42,6 +42,7 @@
 #include "StorageEngine/EngineSelectorFeature.h"
 #include "StorageEngine/StorageEngine.h"
 #include "StorageEngine/TransactionCollection.h"
+#include "Statistics/ServerStatistics.h"
 #include "Transaction/Context.h"
 #include "Transaction/Manager.h"
 #include "Transaction/ManagerFeature.h"
@@ -105,6 +106,7 @@ Result RocksDBTransactionState::beginTransaction(transaction::Hints hints) {
     // register with manager
     transaction::ManagerFeature::manager()->registerTransaction(id(), nullptr, isReadOnlyTransaction());
     updateStatus(transaction::Status::RUNNING);
+    ServerStatistics::statistics()._transactionsStatistics._transactionsStarted++;
 
     setRegistered();
 
@@ -192,7 +194,7 @@ void RocksDBTransactionState::createTransaction() {
   rocksdb::TransactionDB* db = rocksutils::globalRocksDB();
   rocksdb::TransactionOptions trxOpts;
   trxOpts.set_snapshot = true;
-  
+
   // unclear performance implications do not use for now
   // trxOpts.deadlock_detect = !hasHint(transaction::Hints::Hint::NO_DLD);
   if (isOnlyExclusiveTransaction()) {
@@ -256,7 +258,7 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
 #endif
     return Result();
   }
-  
+
   // we may need to block intermediate commits
   ExecContext const* exe = ExecContext::CURRENT;
   if (!isReadOnlyTransaction() && exe != nullptr) {
@@ -265,7 +267,7 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
       return Result(TRI_ERROR_ARANGO_READ_ONLY, "server is in read-only mode");
     }
   }
-  
+
   auto commitCounts = [this]() {
     TRI_ASSERT(_lastWrittenOperationTick > 0);
     for (auto& trxColl : _collections) {
@@ -279,7 +281,7 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
       coll->commitCounts(id(), _lastWrittenOperationTick);
     }
   };
-  
+
   // we are actually going to attempt a commit
   if (!isSingleOperation()) {
     // add custom commit marker to increase WAL tailing reliability
@@ -317,7 +319,7 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
     auto* coll = static_cast<RocksDBTransactionCollection*>(trxColl);
     coll->prepareCommit(id(), preCommitSeq);
   }
-  
+
   // if we fail during commit, make sure we remove blockers, etc.
   auto cleanupCollTrx = scopeGuard([this]() {
     for (auto& trxColl : _collections) {
@@ -341,12 +343,12 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
   uint64_t numOps = _rocksTransaction->GetNumPuts() +
                     _rocksTransaction->GetNumDeletes() +
                     _rocksTransaction->GetNumMerges();
-  
+
   rocksdb::Status s = _rocksTransaction->Commit();
   if (!s.ok()) { // cleanup performed by scope-guard
     return rocksutils::convertStatus(s);
   }
-  
+
   TRI_ASSERT(numOps > 0);  // simon: should hold unless we're being stupid
   rocksdb::SequenceNumber postCommitSeq = _rocksTransaction->GetId();
   TRI_ASSERT(postCommitSeq != 0);
@@ -355,7 +357,7 @@ arangodb::Result RocksDBTransactionState::internalCommit() {
   }
   TRI_ASSERT(postCommitSeq <= rocksutils::globalRocksDB()->GetLatestSequenceNumber());
   _lastWrittenOperationTick = postCommitSeq;
-  
+
   commitCounts();
   cleanupCollTrx.cancel();
 
@@ -395,6 +397,7 @@ Result RocksDBTransactionState::commitTransaction(transaction::Methods* activeTr
     if (res.ok()) {
       updateStatus(transaction::Status::COMMITTED);
       cleanupTransaction();  // deletes trx
+      ServerStatistics::statistics()._transactionsStatistics._transactionsCommitted++;
     } else {
       abortTransaction(activeTrx);  // deletes trx
     }
@@ -426,6 +429,7 @@ Result RocksDBTransactionState::abortTransaction(transaction::Methods* activeTrx
     TRI_ASSERT(!_rocksTransaction && !_cacheTx && !_readSnapshot);
   }
 
+  ServerStatistics::statistics()._transactionsStatistics._transactionsAborted++;
   unuseCollections(nestingLevel());
   return result;
 }
@@ -597,6 +601,7 @@ Result RocksDBTransactionState::triggerIntermediateCommit(bool& hasPerformedInte
   }
 
   hasPerformedIntermediateCommit = true;
+  ServerStatistics::statistics()._transactionsStatistics._intermediateCommits++;
 
   TRI_IF_FAILURE("FailAfterIntermediateCommit") {
     THROW_ARANGO_EXCEPTION(TRI_ERROR_DEBUG);
