@@ -1,6 +1,9 @@
 devel
 -----
 
+* Add TransactionStatistics to ServerStatistics (transactions started /
+  aborted / committed and number of intermediate commits).
+
 * Agents to remove callback entries when responded to with code 404
 
 * Added AQL function DATE_ROUND to bin a date/time into a set of equal-distance
